fix page alignment

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -26,3 +26,9 @@ input{
 .low {
   background: orchid;
 }
+.row {
+  margin: auto;
+}
+.container {
+  text-align: center;
+}
